[package]
name = "p_macro"
version = "0.1.0"
authors = ["贾一饼 <lby.i@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[features]

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0.36"
proc-macro2 = "1.0"
