[package]
name = "hoper"
version = "0.1.0"
authors = ["贾一饼 <liovx@qq.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
p_macro = { path = "../p_macro" }
rand = "0.8.5"
rayon = "1.1.0"
regex = "1.3.1"
hashbrown = "0.13.1"
serde = "*"
serde_json="*"
tracing = "0.1.28"
tracing-subscriber = "0.3.16"
warp = "0.3"
tokio = { version = "1.11", features = ["full"]}
async-std = { version = "1.10.0", features = ["unstable","attributes"]}
futures = "0.3.17"
thiserror = "1.0.25"
futures-timer = "3.0.2"
axum= "0.6.1"
console = "0.9.1"

[dependencies.windows]
version = "0.48"
features = [
    "Data_Xml_Dom",
    "Win32_System_Console",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]

[dev-dependencies]

[[bin]]
name = "async"
path = "src/bin/async/async.rs"

[[bin]]
name = "feature_recursive"
path = "src/bin/async/feature_recursive.rs"

[[bin]]
name = "feature_select"
path = "src/bin/async/feature_select.rs"

[[bin]]
name = "axum"
path = "src/bin/axum/axum.rs"
