[package]
name = "lang"
version = "0.1.0"
authors = ["贾一饼 <lby.i@qq.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
p_macro = { path = "../p_macro" }
rand = "0.8"
rayon = "1.10"
regex = "1.10"
hashbrown = "0.14"
serde = "*"
serde_json="*"
tracing = "0.1"
tracing-subscriber = "0.3"
warp = "0.3"
tokio = { version = "1.37", features = ["full"]}
async-std = { version = "1.12", features = ["unstable","attributes"]}
futures = "0.3"
thiserror = "1.0"
futures-timer = "3.0"
axum = { version="0.7" }
console = "0.15"

[dependencies.windows]
version = "0.56"
features = [
    "Data_Xml_Dom",
    "Win32_System_Console",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]

[dev-dependencies]

[[bin]]
name = "async"
path = "src/bin/async/async.rs"

[[bin]]
name = "feature_recursive"
path = "src/bin/async/feature_recursive.rs"

[[bin]]
name = "feature_select"
path = "src/bin/async/feature_select.rs"

[[bin]]
name = "axum"
path = "src/bin/axum/axum.rs"
