[package]
name = "async_test"
version = "0.1.0"
authors = ["liov <lby.i@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[features]


[dependencies]
tokio = { version = "1.6.1", features = ["full"]}
async-std = { version = "1.9.0", features = ["unstable","attributes"]}
futures = "0.3.15"
thiserror = "1.0.25"
futures-timer = "3.0.2"
mio = "0.7.11"
log = { git = "https://github.com/rust-lang/log"}
