[package]
name = "ffi"
version = "0.1.0"
authors = ["贾一饼 <lby.i@qq.com>"]
edition = "2018"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
cpp = "0.5"
libc="0.2"

[build-dependencies]
cpp_build = "0.5"
cc = { version = "1.0.38", features = ["parallel"] }
