[package]
name = "hoper"
version = "0.1.0"
authors = ["贾一饼 <lby.i@qq.com>"]
edition = "2018"


[dependencies]
p_macro = { path = "../p_macro" }
rand = "0.7"
actix-web="3"
actix-rt="2"
actix = "0.12.0"
futures = "0.3.15"
rayon = "1.1.0"
regex = "1.3.1"
hashbrown = " 0.7.2"
serde = "*"
serde_json="*"
log = { git = "https://github.com/rust-lang/log"}
warp = "0.3"
tokio = { version = "1.6.1", features = ["full"]}
async-std = { version = "1.9.0", features = ["unstable","attributes"]}
futures = "0.3.15"
thiserror = "1.0.25"
futures-timer = "3.0.2"
mio = "0.7.11"


[[bin]]
name = "async"
path = "src/bin/async/async.rs"

[[bin]]
name = "feature_recursive"
path = "src/bin/async/feature_recursive.rs"

[[bin]]
name = "feature_select"
path = "src/bin/async/feature_select.rs"