[package]
name = "hoper"
version = "0.1.0"
authors = ["贾一饼 <lby.i@qq.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
p_macro = { path = "../p_macro" }
rand = "0.7"
actix-web="3"
actix-rt="2"
actix = "0.12.0"
rayon = "1.1.0"
regex = "1.3.1"
hashbrown = " 0.7.2"
serde = "*"
serde_json="*"
tracing = "0.1.28"
tracing-subscriber = "0.2.24"
warp = "0.3"
tokio = { version = "1.11", features = ["full"]}
async-std = { version = "1.10.0", features = ["unstable","attributes"]}
futures = "0.3.17"
thiserror = "1.0.25"
futures-timer = "3.0.2"
mio = "0.7.13"
cpp = "0.5"
libc="0.2"
axum="0.4.3"

[build-dependencies]
cpp_build = "0.5"
cc = { version = "1.0.38", features = ["parallel"] }


[[bin]]
name = "async"
path = "src/bin/async/async.rs"

[[bin]]
name = "feature_recursive"
path = "src/bin/async/feature_recursive.rs"

[[bin]]
name = "feature_select"
path = "src/bin/async/feature_select.rs"

[[bin]]
name = "cpp"
path = "src/bin/cpp/cpp.rs"

[[bin]]
name = "axum"
path = "src/bin/axum/axum.rs"