[package]
name = "cdylib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os="android")'.dependencies]
android_logger = "0.10.1"

[lib]
name = "rust"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
libc = "0.2.112"
axum = "0.5.9"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
futures = "0.3.17"
tracing = "0.1.29"
tracing-subscriber = "0.2.25"
tokio = { version = "1.19.2", features = ["full"] }
slog = "2.7.0"
slog-stdlog = "4.1.0"
slog-scope = "4.4.0"
slog-term = "2.8.0"
slog-async = "2.7.0"
lazy_static = "1.4.0"
once_cell = "1.9.0"
log = "0.4.14"