[package]
name = "hoper"
version = "0.1.0"
authors = ["贾一饼 <lby.i@qq.com>"]
edition = "2018"


[dependencies]
p_macro = { path = "../p_macro" }
rand = "0.6.5"
actix-web="3.3.2"
actix-rt="1"
actix = "0.11.1"
futures = "0.3.15"
log = "0.4.14"
rayon = "1.1.0"
regex = "1.3.1"
hashbrown = " 0.7.2"
serde = "*"
serde_json="*"

[build-dependencies]
cpp_build = "0.5.3"
cc = { version = "1.0.38", features = ["parallel"] }
