[package]
name = "hoper"
version = "0.1.0"
authors = ["贾一饼 <lby.i@qq.com>"]
edition = "2018"


[dependencies]
p_macro = { path = "../p_macro" }
rand = "0.7"
actix-web="3"
actix-rt="2"
actix = "0.12.0"
futures = "0.3.15"
rayon = "1.1.0"
regex = "1.3.1"
hashbrown = " 0.7.2"
serde = "*"
serde_json="*"
log = { git = "https://github.com/rust-lang/log"}
