[package]
name = "message"
version = "0.1.0"
edition = "2024"

[lib]
name = "message"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
libc = "0.2"
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.19", features = ["full"] }
slog = "2.7"
tower = {version = "0.5", features = ["full"]}
tower-http = { version = "0.6", features = ["full"] }
tracing-subscriber = "0.3"
tracing = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
dashmap = "6.1"
futures-util = "0.3"