[package]
name = "mobile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os="android")'.dependencies]
android_logger = "0.14.1"

[lib]
name = "mobile"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
libc = "0.2"
axum = "0.7.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.73"
futures = "0.3.17"
tracing = "0.1.29"
tracing-subscriber = "0.3"
tokio = { version = "1.19", features = ["full"] }
slog = "2.7"
slog-stdlog = "4.1"
slog-scope = "4.4"
slog-term = "2.8"
slog-async = "2.7"
lazy_static = "1.4"
once_cell = "1.9"
log = "0.4"