[package]
name = "rbclient"
version = "0.1.0"
edition = "2021"

[lib]
name = "rbclient"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
bytes = "1"
hex = "0.4"
libc = "0.2"
prost = "0.13"
rand = "0.8"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
webrtc-ice = "0.13"
webrtc-util = "0.11"

[build-dependencies]
prost-build = "0.13"
