[package]
name = "timer"
version = "0.1.0"
authors = ["liov <liovx@qq.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false
test = false

[dependencies]
tonic = "0.8.2"
prost = "0.11.2"
prost-types = "0.11.2"
tokio = { version = "1.14.0", features = ["full"] }
tokio-stream = { version =  "0.1.8", features = ["net"] }
async-stream = "0.3.2"
futures = { version = "0.3.18", default-features = false, features = ["alloc"] }
bytes = { version = "1.1.0", optional = true }
log = "0.4.14"
rand = "0.8.5"
slog = "2.7.0"
slog-async = "2.7.0"
slog-stdlog = "4.1.0"
slog-scope = "4.4.0"
slog-term = "2.8.0"
diesel = { version = "2.0.2", features = ["postgres"] }

[dev-dependencies]
serde_json = "1.0.72"
serde = "1.0.130"
serde_derive = "1.0.130"
prost-derive = "0.11.2"



[build-dependencies]
tonic-build = "0.6.0"

[[bin]]
name = "server"
test = false