[package]
name = "timer"
version = "0.1.0"
authors = ["liov <liovx@qq.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false
test = false

[dependencies]
tonic = "0.8"
prost = "0.11"
prost-types = "0.11"
tokio = { version = "1.26", features = ["full"] }
tokio-stream = { version =  "0.1", features = ["net"] }
async-stream = "0.3"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
bytes = { version = "1.4", optional = true }
log = "0.4"
rand = "0.8.5"
slog = "2.7.0"
slog-async = "2.7"
slog-stdlog = "4.1"
slog-scope = "4.4"
slog-term = "2.8"
diesel = { version = "2.0", features = ["postgres"] }
axum = "0.6"
toml = "0.7"
serde =  { version = "1.0", features = ["derive"] }
serde_json="1.0"
lazy_static = "1.4"
once_cell = "1.17"

[dev-dependencies]




[build-dependencies]
tonic-build = "0.8"

[[bin]]
name = "server"
test = false