[package]
name = "timer"
version = "0.1.0"
authors = ["liov <lby.i@qq.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false
test = false

[dependencies]
tonic = "0.10.2"
prost = "0.12.3"
prost-types = "0.12.3"
tokio = { version = "1.32", features = ["full"] }
tokio-stream = { version =  "0.1", features = ["net"] }
async-stream = "0.3"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
bytes = { version = "1.4", optional = true }
log = { version = "*" ,features = ["max_level_trace", "release_max_level_warn"] }
rand = "0.8"
#slog =  { version = "2.7" ,features = ["max_level_trace", "release_max_level_warn"] }
slog-stdlog = "4.1.1"
diesel = { version = "2.1", features = ["postgres"] }
axum = "0.7.3"
toml = "0.8.8"
serde =  { version = "1.0", features = ["derive"] }
serde_json="1.0"
lazy_static = "1.4"
once_cell = "1.18"

[dev-dependencies]




[build-dependencies]
tonic-build = "0.9.2"

[[bin]]
name = "server"
test = false