[package]
name = "hello_v3"
version = "0.1.0"
authors = ["liov <lby.i@qq.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false
test = false

[dependencies]
tonic = "0.2.0"
bytes = "0.4"
prost = "0.5"
prost-derive = "0.5"
tokio = "0.2.0-alpha.6"
futures-preview = { version = "=0.3.0-alpha.19", default-features = false, features = ["alloc"]}
async-stream = "0.1.2"
bytes = { version = "0.4.11", optional = true }
log = "0.4.7"
libc = "0.2.62"
futures = "^0.1.29"
rand = "0.7.2"
slog = "2.5.2"
slog-async = "2.3.0"
slog-stdlog = "3.0"
slog-scope = "4.1.2"
slog-term = "2.4.1"

[dev-dependencies]
serde_json = "1.0.40"
serde = "1.0.101"
serde_derive = "1.0.101"



[build-dependencies]
tonic-build = "0.1.0-alpha.2"

[[bin]]
name = "server"
test = false