load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "cache.go",
        "config.go",
        "db.go",
        "elastic.go",
        "init.go",
        "kafka.go",
        "log.go",
        "mail.go",
        "nsq.go",
        "redis.go",
    ],
    importpath = "github.com/liov/hoper/go/v2/v2/initialize",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_bluele_gcache//:go_default_library",
        "@com_github_gomodule_redigo//redis:go_default_library",
        "@com_github_jinzhu_configor//:go_default_library",
        "@com_github_jinzhu_gorm//:go_default_library",
        "@com_github_jinzhu_gorm//dialects/mysql:go_default_library",
        "@com_github_nsqio_go_nsq//:go_default_library",
        "@com_github_olivere_elastic//:go_default_library",
        "@com_github_shopify_sarama//:go_default_library",
        "@org_uber_go_zap//zapcore:go_default_library",
    ],
)
