load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/liov/hoper/go/v2/v2/user",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "user",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
