[package]
name = "async_test"
version = "0.1.0"
authors = ["liov <lby.i@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.2.0-alpha.5"
async-std = { version = "1.1.0", features = ["unstable","attributes"]}
futures = "0.1.29"
