[package]
name = "hello"
version = "0.1.0"
authors = ["liov <lby.i@qq.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false
test = false

[dependencies]
grpc            = "~0.6"
protobuf        = "~2"
futures         = "~0.1"
futures-cpupool = "~0.1"

[build-dependencies]
protoc-rust-grpc = "0.6.1"

[[bin]]
name = "server"
test = false