[package]
name = "async_test"
version = "0.1.0"
authors = ["liov <lby.i@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
tokio = "0.2.0-alpha.5"
async-std = { version = "1.2.0", features = ["unstable","attributes"]}
futures = "0.3.1"
thiserror = "1.0.6"
futures-timer = "2.0.2"
mio = "0.6.21"
log = { git = "https://github.com/rust-lang/log"}
