[package]
name = "hoper"
version = "0.1.0"
authors = ["贾一饼 <lby.i@qq.com>"]
edition = "2018"


[dependencies]
p_macro = { path = "../p_macro" }
rand = "0.6.5"
libc="0.2.58"
actix-web="3.0.0-alpha.3"
actix-rt="1.0.0"
futures = "0.3.5"
cpp = "0.5.3"
log = "0.4.7"
rayon = "1.1.0"
regex = "1.3.1"
hashbrown = " 0.7.2"

[build-dependencies]
cpp_build = "0.5.3"
cc = { version = "1.0.38", features = ["parallel"] }
